<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/petListFragment"
            android:icon="@drawable/ic_pets"
            android:title="@string/nav_pets" />
        <item
            android:id="@+id/taskListFragment"
            android:icon="@drawable/ic_tasks"
            android:title="@string/nav_tasks" />
        <item
            android:id="@+id/faqFragment"
            android:icon="@drawable/ic_faq"
            android:title="@string/nav_faq" />
        <item
            android:id="@+id/apiKeyFragment"
            android:title="@string/nav_api_keys" />
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/geminiAssistantFragment"
            android:icon="@drawable/ic_assistant"
            android:title="@string/gemini_assistant_title" />
    </group>
</menu>
